--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h2>これは自由な大きさに変えれる時計です</h2>
     <script src="sketch.js"></script>
     <div id="can"></div>
-    <label> 数値：<input type="text" value="500" id="inp"></label>
+    <label> 数値：<input type="text" value="半角数字で大きさを入力" id="inp"></label>
   
 </body></html>
